--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@convex-dev/auth": "^0.0.90",
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/adapter-netlify": "^5.2.4",
 		"@sveltejs/kit": "^2.43.2",
@@ -27,11 +28,13 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.14",
+		"clerk-sveltekit": "^0.4.2",
 		"convex": "^1.28.0",
 		"convex-svelte": "^0.0.11",
 		"lucide-svelte": "^0.546.0",
 		"motion": "^12.23.24",
 		"split-type": "^0.3.4",
+		"svelte-clerk": "^0.17.6",
 		"svelte-icons-pack": "^3.1.3",
 		"zod": "^4.1.12"
 	}
